Fixed view my work Btn by changing the width to fit content and My resume Btn needed a z-index to pop in front and not be in the back. Now when hover over Btn effects happens and now clickable to link

--- a/src/components/About-Me/style.css
+++ b/src/components/About-Me/style.css
@@ -64,6 +64,7 @@
     width: 17rem;
     min-width: 10rem;
     font-size: 21px;
+    z-index: 4;
     font-family: 'Concert One', cursive;
     border: none;
     border-radius: 5px;
