--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -128,11 +128,14 @@ section {
     font-size: 22px;
     text-transform: uppercase;
     font-family: 'Concert One', cursive;
-    min-width: 60px;
+    min-width: 35%;
     border: none;
     border-radius: 5px;
     filter: drop-shadow(15px 21px 16px black);
     transition: transform 0.5s ease-in-out;
+    background-color: #ffffff;
+    width: fit-content;
+
    
 }
 .workBtn:hover {
